log
ju.,  7 de abr. de 2022 11:52:18: 
 hashmap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
d915c6c
vi.,  8 de abr. de 2022 22:24:14: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
b0dd4ff
sá.,  9 de abr. de 2022 14:46:24: 
 hashmap.c | 66 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 61 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:65:45: error: 'capacity' undeclared (first use in this function)
     Pair ** old_buckets = (Pair **) malloc (capacity * sizeof(Pair*)); ;
                                             ^~~~~~~~
hashmap.c:65:45: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:66:10: error: 'i' undeclared (first use in this function)
     for (i = 0; i < map->capacity; i++)
          ^
hashmap.c:81:33: error: '*old_buckets' is a pointer; did you mean to use '->'?
       insertMap(map, old_buckets->key, old_buckets->value);
                                 ^~
                                 ->
hashmap.c:81:51: error: '*old_buckets' is a pointer; did you mean to use '->'?
       insertMap(map, old_buckets->key, old_buckets->value);
                                                   ^~
                                                   ->
Compilation failed
d759bd1
sá.,  9 de abr. de 2022 14:48:03: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:79:20: error: 'i' undeclared (first use in this function)
     if(old_buckets[i] != NULL && old_buckets[i]->key != NULL)
                    ^
hashmap.c:79:20: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:81:33: error: '*old_buckets' is a pointer; did you mean to use '->'?
       insertMap(map, old_buckets->key, old_buckets->value);
                                 ^~
                                 ->
hashmap.c:81:51: error: '*old_buckets' is a pointer; did you mean to use '->'?
       insertMap(map, old_buckets->key, old_buckets->value);
                                                   ^~
                                                   ->
Compilation failed
8417c7a
sá.,  9 de abr. de 2022 15:15:37: 
 hashmap.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  15|2
total_score: 50/70
8e9ce2e
